--- a/api/package.json
+++ b/api/package.json
@@ -1,22 +1,65 @@
 {
   "name": "api",
-  "version": "1.0.0",
-  "description": "The API layer for working with our Pokedex",
-  "main": "index.js",
+  "version": "0.0.1",
+  "description": "Pokedex API layer",
+  "keywords": [
+    "loopback-application",
+    "loopback"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=10.16"
+  },
   "scripts": {
-    "test": "test"
+    "build": "lb-tsc",
+    "build:watch": "lb-tsc --watch",
+    "lint": "npm run prettier:check && npm run eslint",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
+    "prettier:check": "npm run prettier:cli -- -l",
+    "prettier:fix": "npm run prettier:cli -- --write",
+    "eslint": "lb-eslint --report-unused-disable-directives .",
+    "eslint:fix": "npm run eslint -- --fix",
+    "pretest": "npm run clean && npm run build",
+    "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
+    "posttest": "npm run lint",
+    "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
+    "docker:build": "docker build -t api .",
+    "docker:run": "docker run -p 3000:3000 -d api",
+    "migrate": "node ./dist/migrate",
+    "openapi-spec": "node ./dist/openapi-spec",
+    "prestart": "npm run build",
+    "start": "node -r source-map-support/register .",
+    "clean": "lb-clean dist *.tsbuildinfo .eslintcache"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/naasse/ibm-quantum-challenge.git"
+    "type": "git"
   },
-  "author": "Nathan Asselstine",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/naasse/ibm-quantum-challenge/issues"
-  },
-  "homepage": "https://github.com/naasse/ibm-quantum-challenge#readme",
+  "author": "",
+  "license": "",
+  "files": [
+    "README.md",
+    "dist",
+    "src",
+    "!*/__tests__"
+  ],
   "dependencies": {
-    "@loopback/cli": "^2.13.0"
+    "@loopback/boot": "^2.5.0",
+    "@loopback/core": "^2.9.4",
+    "@loopback/repository": "^2.11.1",
+    "@loopback/rest": "^6.1.0",
+    "@loopback/rest-explorer": "^2.2.9",
+    "@loopback/service-proxy": "^2.3.7",
+    "tslib": "^2.0.0"
+  },
+  "devDependencies": {
+    "@loopback/build": "^6.2.1",
+    "source-map-support": "^0.5.19",
+    "@loopback/testlab": "^3.2.3",
+    "@types/node": "^10.17.28",
+    "@loopback/eslint-config": "^9.0.1",
+    "eslint": "^7.7.0",
+    "typescript": "~3.9.7"
   }
 }
