--- a/api/package.json
+++ b/api/package.json
@@ -51,6 +51,8 @@
     "@loopback/rest": "^6.1.0",
     "@loopback/rest-explorer": "^2.2.9",
     "@loopback/service-proxy": "^2.3.7",
+    "@types/lodash": "^4.14.159",
+    "lodash": "^4.17.20",
     "loopback-connector-mongodb": "^5.3.0",
     "tslib": "^2.0.0"
   },
