--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
