--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "build": "react-scripts build",
     "lint": "tslint src/**/*.ts",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e": "cypress run",
+    "e2e:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^5.0.0",
     "tslint": "^6.1.3"
   }
 }
