feat: API integration testing
* Setting up in-memory database

--- a/api/package.json
+++ b/api/package.json
@@ -15,8 +15,12 @@
     "build": "lb-tsc",
     "build:watch": "lb-tsc --watch",
     "pretest": "npm run build",
-    "test": "lb-mocha --allow-console-logs --require babel-core/register dist/**/*.test.js",
     "pretest:cover": "npm run build",
+    "pretest:unit": "npm run build",
+    "pretest:integration": "npm run build",
+    "test": "lb-mocha --allow-console-logs --require babel-core/register dist/**/*.test.js",
+    "test:unit": "lb-mocha --allow-console-logs --require babel-core/register dist/**/*.unit.test.js",
+    "test:integration": "lb-mocha --allow-console-logs --require babel-core/register dist/**/*.integration.test.js",
     "test:cover": "nyc lb-mocha --allow-console-logs --require babel-core/register dist/**/*.test.js",
     "lint": "tslint src/**/*.ts",
     "openapi-spec": "node ./dist/openapi-spec",
